<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workshop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_username">Username: </string>
    <string name="label_password">Password: </string>
    <string name="label_name">Name: </string>
    <string name="label_email">Email: </string>
    <string name="label_phone">Phone: </string>
    <string name="label_position">Position: </string>
    <string name="btn_signin">Signin</string>
    <string name="btn_signup">Signup</string>

</resources>